@@ -1,5 +1,11 @@
 2002-04-09  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03169] Can't calculate table height if number of cells > 20.
+	* table.c (check_table_height): change row, rowspan, indexarray, height
+			from array to pointer
+
+2002-04-09  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03167] xface2xbm -> xface2xpm (current imlib can't handle XBM)
 	* configure: s/XFACE2XBM/XFACE2XPM/
 	* config.h.dist: ditto
